add correct tests